| EM-47 | Feature | Add user create endpoint |

--- a/config/locales/rswag.yml
+++ b/config/locales/rswag.yml
@@ -1,7 +1,10 @@
 en:
   swagger:
     sessions:
-      name: Sessions
-      actions:
+      tags: Session
+      action:
         post: create session
         delete: delete session
+    users:
+      tags: User
+      action: create user
