| EM-90 | Feature | Add my account show |

--- a/config/locales/rswag.yml
+++ b/config/locales/rswag.yml
@@ -9,3 +9,7 @@ en:
     users:
       tags: User
       action: create user
+    my_account:
+      tags: My Account
+      action:
+        show: show my account
