| EM-79 | Feature | Add endpoint invitation create

--- a/config/locales/rswag.yml
+++ b/config/locales/rswag.yml
@@ -13,3 +13,7 @@ en:
       tags: My Account
       action:
         show: show my account
+    invitations:
+      tags: Invitations
+      action:
+        post: create invitation
