| EM-88 | Feature | Add users index |

--- a/config/locales/rswag.yml
+++ b/config/locales/rswag.yml
@@ -8,7 +8,9 @@ en:
         update: update session
     users:
       tags: User
-      action: create user
+      action:
+        index: index users
+        create: create user
     my_account:
       tags: My Account
       action:
