| EM-84 | Feature | Add friends create for accept invitation logic

--- a/config/locales/rswag.yml
+++ b/config/locales/rswag.yml
@@ -18,7 +18,8 @@ en:
     friends:
       tags: Friend
       action:
-        index: show list of friends
+        create: create friend
+        index: show list of friends 
     invitations:
       tags: Invitations
       action:
