| EM-83 | Feature | Add invitations destroy for revoke invitation logic |

--- a/config/locales/rswag.yml
+++ b/config/locales/rswag.yml
@@ -19,8 +19,9 @@ en:
       tags: Friend
       action:
         create: create friend
-        index: show list of friends 
+        index: show list of friends
     invitations:
       tags: Invitations
       action:
         post: create invitation
+        delete: delete invitation
