| EM-80 | Feature | Add invitations index

--- a/config/locales/rswag.yml
+++ b/config/locales/rswag.yml
@@ -25,4 +25,5 @@ en:
       tags: Invitations
       action:
         post: create invitation
+        index: show invitation list
         delete: delete invitation
