| EM-87 | Feature | Add invitations update for decline invitation logic

--- a/config/locales/rswag.yml
+++ b/config/locales/rswag.yml
@@ -27,3 +27,4 @@ en:
         post: create invitation
         index: show invitation list
         delete: delete invitation
+        patch: update invitation
