| EM-143 | Feature | Add playlist destroy endpoint

--- a/config/locales/rswag.yml
+++ b/config/locales/rswag.yml
@@ -28,3 +28,7 @@ en:
         index: show invitation list
         delete: delete invitation
         patch: update invitation
+    playlists:
+      tags: Playlists
+      action:
+        delete: delete playlist
