| EM-115 | Feature | Create endpoint page content show

--- a/config/locales/rswag.yml
+++ b/config/locales/rswag.yml
@@ -41,3 +41,7 @@ en:
       tags: User Reactions
       action:
         post: create user reaction
+    static_pages:
+      tags: Static Pages
+      action:
+        show: show slug content
