| EM-117 | Feature | Add email on invitation update |

--- a/config/locales/mailer.yml
+++ b/config/locales/mailer.yml
@@ -1,5 +1,7 @@
 en:
   mailer:
     invitation:
+      subject: Epam Music invitation notification
       action:
         create: You get friends invitation
+        update: Your invitation were declined by %{nickname}
