| EM-118 | Feature | Add email on invitation delete |

--- a/config/locales/mailer.yml
+++ b/config/locales/mailer.yml
@@ -5,3 +5,4 @@ en:
       action:
         create: You get friends invitation
         update: Your invitation were declined by %{nickname}
+        destroy: You had invitation from %{nickname}, but requestor canceled it
