| EM-98 | Feature | Add avatar to my_account#update |

--- a/config/locales/models/my_account/update.yml
+++ b/config/locales/models/my_account/update.yml
@@ -3,3 +3,5 @@ en:
     update:
       errors:
         nickname_exist: already exist
+        avatar_format: 'type must be one of: image/jpeg, image/png, image/webp'
+        avatar_size: "size must not be greater than #{count} bytes"
