| EM-155 | Feature | Add home index |

--- a/config/locales/rswag.yml
+++ b/config/locales/rswag.yml
@@ -46,3 +46,7 @@ en:
       tags: Static Pages
       action:
         show: show slug content
+    home:
+      tags: Home
+      action:
+        index: index home page data
