--- a/config/locales/rswag.yml
+++ b/config/locales/rswag.yml
@@ -42,6 +42,7 @@ en:
       tags: User Reactions
       action:
         post: create user reaction
+        patch: update user reaction
         delete: delete user reaction
     static_pages:
       tags: Static Pages
