| EM-86 | Feature | Add friends destroy endpoint for remove from friends

--- a/config/locales/rswag.yml
+++ b/config/locales/rswag.yml
@@ -22,6 +22,7 @@ en:
       action:
         create: create friend
         index: show list of friends
+        destroy: delete friend
     invitations:
       tags: Invitations
       action:
